--- a/client/src/index.css
+++ b/client/src/index.css
@@ -86,6 +86,9 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+* {
+  box-sizing: border-box;
+}
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
